Update Swagger Transactions
